[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dungeon/Scenes/SmallDoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://DungeonCells/Scripts/DungeonCell.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.5, 1.5, 4.5 )

[node name="DungeonCorridor_01" type="Spatial"]
script = ExtResource( 2 )
cell_type = 1

[node name="CSGCombiner" type="CSGCombiner" parent="."]
use_collision = true

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -5.5 )
width = 3.0
height = 1.0
depth = 11.0

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -2, 1.5, -5.5 )
width = 3.0
height = 1.0
depth = 11.0

[node name="CSGBox3" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2, 1.5, -5.5 )
width = 3.0
height = 1.0
depth = 11.0

[node name="Area" type="Area" parent="."]
monitoring = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -4.5 )
shape = SubResource( 1 )

[node name="DoorContainer" type="Spatial" parent="."]

[node name="SmallDoor" parent="DoorContainer" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.5 )
[connection signal="on_door_clicked" from="DoorContainer/SmallDoor" to="." method="_on_SmallDoor_on_door_clicked"]
